[gd_scene load_steps=22 format=2]

[ext_resource path="res://container.gd" type="Script" id=1]
[ext_resource path="res://sounds/hit.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/Burn.png" type="Texture" id=3]
[ext_resource path="res://sounds/boom.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/container.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 1024, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 1152, 128, 128 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "boom",
"speed": 15.0
} ]

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "shot"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}

[node name="container" type="StaticBody2D" groups=["container"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 11 )

[node name="hit_container" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="boom" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="boom_sprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 5, -31 )
frames = SubResource( 14 )
animation = "boom"
frame = 3

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 16 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/shot = SubResource( 18 )

[connection signal="animation_finished" from="boom_sprite" to="." method="_on_boom_sprite_animation_finished"]
